wrote code for changing gifs based on the balance

--- a/src/styles/Balance.css
+++ b/src/styles/Balance.css
@@ -54,3 +54,9 @@
   margin-bottom: 10px;
   color: #333;
 }
+
+.gif {
+  border: 10px solid rgb(154, 224, 165);
+  border-radius: 260px;
+  max-width: 300px;
+}
