--- a/src/styles/Balance.css
+++ b/src/styles/Balance.css
@@ -54,7 +54,7 @@
 }
 
 .gif {
-  border: 10px solid rgb(154, 224, 165);
+  border: 10px solid rgb(0,71,119);
   border-radius: 260px;
   max-width: 300px;
   min-width: 300px;
