--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,4 +1,10 @@
 .navbar {
-    background-color: rgb(16,25,53);
-    color: rgb(242,253,255);
+    background-color: rgb(16, 25, 53);
+    color: rgb(242, 253, 255);
+    width: 100%;
+}
+
+.navLinks>div>div {
+    display: inline-block;
+    margin-right: 30px;
 }
